FIX: Styling for sign out button on mobile

--- a/app/packs/stylesheets/_header.sass
+++ b/app/packs/stylesheets/_header.sass
@@ -42,5 +42,8 @@
   @apply  max-w-7xl mx-auto bg-blue-900 px-4 sm:px-6 lg:px-8
 
 
-.mobile-dropdown-links
-  @apply  border-transparent text-gray-500 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-700 block px-3 pr-4 py-2 border-l-4 text-base font-medium mr-8 rounded
+.mobile-dropdown-link
+  @apply  border-transparent text-gray-500 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-700 block px-3 pr-4 py-2 border-l-4 text-base font-medium mr-8 rounded w-screen max-w-xl
+
+.sign-out-button
+    @apply  border-transparent text-gray-700 hover:bg-red-200 hover:border-red-800 hover:text-red-700 block py-2 border  text-base font-medium mr-8 rounded w-screen max-w-xl
